# mt_providers_microsoft

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
mt_provider_microsoft/: __init__.py  translator.py
tests/: test_microsoft_translator.py
